[gd_scene load_steps=7 format=3 uid="uid://cpbkljjgg8dyt"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_mfb0a"]
[ext_resource type="Texture2D" uid="uid://e7kjf6eq3src" path="res://resources/ui/end_breaking.png" id="2_qec3q"]
[ext_resource type="AudioStream" uid="uid://dpp2njvio3dgr" path="res://audio/bnn_gameover.wav" id="3_o5a4c"]

[sub_resource type="Animation" id="Animation_wf657"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Breaking:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1830, 325)]
}

[sub_resource type="Animation" id="Animation_00g2m"]
resource_name = "gameover_anim"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Breaking:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1855, 325), Vector2(487, 324.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Breaking:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_gameover_camera"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydx0r"]
_data = {
"RESET": SubResource("Animation_wf657"),
"gameover_anim": SubResource("Animation_00g2m")
}

[node name="GameOver" type="Node2D"]
z_index = 10
script = ExtResource("1_mfb0a")

[node name="ResultTimer" type="Timer" parent="."]
one_shot = true

[node name="BreakingTimer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -189.0
offset_right = 660.0
offset_bottom = 2.0
grow_vertical = 0
color = Color(1, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "BREAKING NEWS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameoverLabel" type="RichTextLabel" parent="Control/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
bbcode_enabled = true
text = "Placholder text"
fit_content = true
autowrap_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Control"]
clip_contents = true
custom_minimum_size = Vector2(500, 660)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect2/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/ColorRect2/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "You were
on air for"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Score" type="RichTextLabel" parent="Control/ColorRect2/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 90
theme_override_font_sizes/bold_font_size = 0
theme_override_font_sizes/italics_font_size = 0
theme_override_font_sizes/bold_italics_font_size = 0
theme_override_font_sizes/mono_font_size = 0
bbcode_enabled = true
text = "00:00
"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Control/ColorRect2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150

[node name="Button" type="Button" parent="Control/ColorRect2/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Play again"

[node name="MarginContainer2" type="MarginContainer" parent="Control/ColorRect2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="Quit" type="Button" parent="Control/ColorRect2/CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Quit
"

[node name="Breaking" type="Sprite2D" parent="."]
position = Vector2(1830, 325)
scale = Vector2(0.95, 0.95)
texture = ExtResource("2_qec3q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ydx0r")
}

[node name="GameOverTune" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o5a4c")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/ColorRect2/CenterContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/ColorRect2/CenterContainer/VBoxContainer/MarginContainer2/Quit" to="." method="_on_quit_pressed"]
